--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ais-decoder-ts",
+  "name": "@argilzar/ais-decoder-ts",
   "version": "3.0.8",
   "description": "Ais Decoder (TypeScript, Node 12.17.0)",
   "main": "dist/lib/index.js",
@@ -39,12 +39,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/doron2402/ais-protocol-decoding.git"
+    "url": "git+https://github.com/argilzar/ais-protocol-decoding.git"
   },
   "bugs": {
-    "url": "https://github.com/doron2402/ais-protocol-decoding/issues"
+    "url": "https://github.com/argilzar/ais-protocol-decoding/issues"
   },
-  "homepage": "https://github.com/doron2402/ais-protocol-decoding#readme",
+  "homepage": "https://github.com/argilzar/ais-protocol-decoding#readme",
   "engines": {
     "node": ">=8.16.2"
   }
